--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -15,11 +15,6 @@ jobs:
         run: black --check .
       - name: If needed, commit black changes to the pull request
         if: failure()
-        run: |
-          black .
-          git config --global user.name 'autoblack'
-          git config --global user.email 'cclauss@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout $GITHUB_HEAD_REF
-          git commit -am "fixup: Format Python code with Black"
-          git push
+        uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
