--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run black --check .
         run: black --check .
       - name: If needed, commit black changes to the pull request
-        if: failure()
+        if: ${{ failure() }}
         uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actions
