--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -18,3 +18,5 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actions
+          message: 'fixup: Format Python code with Black'
+          add: '*'
