--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -1,21 +1,21 @@
 name: autoblack
+# Found here: https://deepsource.io/blog/auto-code-formatting-python/
 on: [push, pull_request]
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: Install Python dependencies
+        run: |
+          pip install pipenv
+          pipenv install --deploy --dev --system
+      - uses: wearerequired/lint-action@v1
         with:
-          python-version: 3.9
-      - name: Install Black
-        run: pip install black
-      - name: Run black .
-        run: black .
-      - name: Commit black changes to the pull request
-        uses: EndBug/add-and-commit@v7
-        with:
-          default_author: github_actions
-          message: 'fixup: Format Python code with Black'
-          add: '*'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          black: true
+          auto_fix: true
+          commit_message: 'fixup: Format Python code with Black'
+          git_name: 'autoblack'
+          git_email: 'autoblack@users.noreply.github.com'
