--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -1,12 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: KiCAD PCm packaging
+name: KiCAD PCM packaging
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   release:
     branches: [ main ]
+    types:
+      - created
  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo ${{ steps.tag.outputs.result }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
