--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -29,9 +29,10 @@ jobs:
           cp *.png archive/plugins
           cp -r icons archive/plugins
           cp *.png archive/resources
-          zip -r ${{ steps.latest-release.outputs.tag }}_pcm.zip archive/*
+          cd archive
+          zip -r ${{ steps.latest-release.outputs.tag }}_PCM.zip .
       - name: Store artifact
         uses: actions/upload-artifact@v2
         with:
           name: KiCAD-PCM
-          path: ${{ steps.latest-release.outputs.tag }}_pcm.zip
+          path: ${{ steps.latest-release.outputs.tag }}_PCM.zip
