--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -37,7 +37,7 @@ jobs:
           cp *.png archive/plugins
           cp -r icons archive/plugins
           cp *.png archive/resources
-          
+          cp metadata.json archive
       - name: Store artifact
         uses: actions/upload-artifact@v2
         with:
