--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -33,7 +33,7 @@ jobs:
           name: KiCAD-PCM-${{ steps.latest-release.outputs.tag }}.zip
           path: ./PCM/KiCAD-PCM-${{ steps.latest-release.outputs.tag }}.zip
       
-      - name: Upload binaries to release
+      - name: Upload zip as asset to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -41,6 +41,14 @@ jobs:
           asset_name: KiCAD-PCM-${{ steps.latest-release.outputs.tag }}.zip
           overwrite: true
           tag: ${{ steps.latest-release.outputs.tag }}
-      
+          
+      - name: Upload metadata.json as asset to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./PCM/metadata.json
+          asset_name: metadata.json
+          overwrite: true
+          tag: ${{ steps.latest-release.outputs.tag }}
             
           
