Update and rename autoblack-pr.yaml to autoblack-pr.yml

--- a/.github/workflows/autoblack-pr.yml
+++ b/.github/workflows/autoblack-pr.yml
@@ -1,6 +1,6 @@
 name: autoblack
 # Found here: https://deepsource.io/blog/auto-code-formatting-python/
-on: [pull-request]
+on: [pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
