--- a/.github/workflows/autoblack-push.yml
+++ b/.github/workflows/autoblack-push.yml
@@ -1,4 +1,4 @@
-name: autoblack
+name: autoblack push
 # Found here: https://deepsource.io/blog/auto-code-formatting-python/
 on: [push]
 jobs:
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install Python dependencies
-        run: pip install black
+        run: pip install black flake8
       - uses: wearerequired/lint-action@v1
         with:
           black: true
