--- a/.github/workflows/autoblack-pr.yml
+++ b/.github/workflows/autoblack-pr.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install Python dependencies
-        run: pip install black
+        run: pip install black flake8
       - uses: wearerequired/lint-action@v1
         with:
           black: true
