--- a/.github/workflows/autoblack-push.yml
+++ b/.github/workflows/autoblack-push.yml
@@ -8,11 +8,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install Python dependencies
-        run: pip install black flake8
+        run: pip install black
       - uses: wearerequired/lint-action@v1
         with:
           black: true
-          flake8: true
           auto_fix: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           commit_message: 'fixup: Format Python code with Black'
