--- a/.github/workflows/autoblack-pr.yml
+++ b/.github/workflows/autoblack-pr.yml
@@ -8,9 +8,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - name: Install Python dependencies
-        run: pip install black flake8
+        run: pip install black
       - uses: wearerequired/lint-action@v1
         with:
           black: true
-          flake8: true
           
