--- a/.github/workflows/autoblack-pr.yml
+++ b/.github/workflows/autoblack-pr.yml
@@ -1,4 +1,4 @@
-name: autoblack
+name: autoblack PR
 # Found here: https://deepsource.io/blog/auto-code-formatting-python/
 on: [pull_request]
 jobs:
