--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -42,6 +42,6 @@ jobs:
           workflow: Rebuild repository
           repo: Bouni/bouni-kicad-repository
           token: ${{ secrets.PERSONAL_TOKEN }}
-          inputs: '{ "DOWNLOAD_SHA256": "${{DOWNLOAD_SHA256}}", "DOWNLOAD_SIZE": "${{DOWNLOAD_SIZE}}", "DOWNLOAD_URL": "${{DOWNLOAD_URL}}", "INSTALL_SIZE": "${{INSTALL_SIZE}}" }'
+          inputs: '{ "DOWNLOAD_SHA256": "${{env.DOWNLOAD_SHA256}}", "DOWNLOAD_SIZE": "${{DOWNLOAD_SIZE}}", "DOWNLOAD_URL": "${{env.DOWNLOAD_URL}}", "INSTALL_SIZE": "${{env.INSTALL_SIZE}}" }'
           
           
