--- a/.github/workflows/kicad-pcm.yml
+++ b/.github/workflows/kicad-pcm.yml
@@ -24,8 +24,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       
-      - name: Create archive and metadata.json
+      - name: Create archive
         run: sh ./PCM/create_pcm_archive.sh ${{ steps.latest-release.outputs.tag }}
+        env:
+          DOWNLOAD_SHA256: ""
+          DOWNLOAD_SIZE: 0
+          DOWNLOAD_URL: ""
+          INSTALL_SIZE: 0
       
       - name: Upload zip as asset to release
         uses: svenstaro/upload-release-action@v2
