--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"partselector": {"basic": false, "extended": false, "stock": false}}
+{"partselector": {"basic": true, "extended": true, "stock": false}}
