--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -4,24 +4,19 @@ on:  # yamllint disable-line rule:truthy
   push:
   pull_request:
 jobs:
-  black:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
+      
       - name: Install black
         run: pip install black
       - name: Run black
         run: black --check --verbose $(git ls-files '*.py')
-  ruff:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        
       - name: Install ruff
         run: pip install ruff
       - name: Run ruff
