--- a/.github/workflows/update_parts_database.yml
+++ b/.github/workflows/update_parts_database.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           set -x
 
+          mkdir -p db_build
+          cd db_build
+
           wget -q https://yaqwsx.github.io/jlcparts/data/cache.zip
           for seq in $(seq 1 9); do
             wget -q https://yaqwsx.github.io/jlcparts/data/cache.z0$seq || true
