--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 23.7.0
     hooks:
       - id: black
         files: ^((luxtronik|pylint|scripts|tests)/.+)?[^/]+\.py$
@@ -10,11 +10,11 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.235
+    rev: v0.0.277
     hooks:
       - id: ruff
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.28.0
+    rev: v1.32.0
     hooks:
       - id: yamllint
   - repo: https://github.com/asottile/pyupgrade
@@ -23,6 +23,12 @@ repos:
       - id: pyupgrade
         args: [--py310-plus]
         stages: [manual]
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.35.0
+    hooks:
+      - id: markdownlint
+        args:
+          - --fix
 # - repo: https://github.com/PyCQA/autoflake
 #   rev: v2.0.0
 #   hooks:
@@ -44,7 +50,6 @@ repos:
 #         - flake8-noqa==1.3.0
 #         - mccabe==0.7.0
 #       stages: [manual]
-
 
 # - repo: https://github.com/pre-commit/pre-commit-hooks
 #   rev: v4.4.0
