Add pylint to pre-commit hooks and GH actions

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -43,21 +43,19 @@ jobs:
         run: pip install black
       - name: Run black
         run: black --diff --check --verbose $(git ls-files '*.py')
-  # pylint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-  #     - name: Set up Python ${{ matrix.python-version }}
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.11"
-  #     - name: Install pytest
-  #       run: pip install pytest
-  #     - name: Install pylint
-  #       run: pip install pylint
-  #     - name: Run pylint
-  #       run: pylint $(git ls-files '*.py')
+  pylint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+      - name: Install pylint
+        run: pip install pylint
+      - name: Run pylint
+        run: pylint $(git ls-files '*.py')
   ruff:
     runs-on: ubuntu-latest
     steps:
