linter.yml - Install humanize library used by jlcparts_db_convert.py

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -54,6 +54,8 @@ jobs:
           python-version: "3.11"
       - name: Install pylint
         run: pip install pylint
+      - name: Install humanize
+        run: pip install humanize
       - name: Run pylint
         run: pylint $(git ls-files '*.py')
   ruff:
